--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "semantic-release": "^8.2.0"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "axios": "^0.17.1"
   }
 }
