build(dev-dependency): remove unneeded dependency

--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,7 @@
           ]
         ],
         "plugins": [
-          "@babel/transform-runtime",
-          "@babel/transform-async-to-generator"
+          "@babel/transform-runtime"
         ]
       },
       "production": {
