--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,28 @@
-
 {
-    "presets": ["es2015", "es2016", "es2017", "stage-0"]
-}
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            { "modules": "umd" }
+          ]
+        ],
+        "plugins": [
+          "@babel/transform-runtime",
+          "@babel/transform-async-to-generator"
+        ]
+      },
+      "production": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            { "modules": false }
+          ]
+        ]
+      }
+    },
+    "ignore": [
+      "node_modules/**",
+      "*.test.js"
+    ]
+  }
