--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@commitlint/prompt": "^6.1.3",
     "@commitlint/prompt-cli": "^6.1.3",
     "axios": "^0.18.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "^7.0.0-0",
     "babel-jest": "^22.4.3",
     "codecov": "^3.0.1",
     "es-check": "^2.0.3",
@@ -76,7 +76,7 @@
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "semantic-release": "^15.1.4",
+    "semantic-release": "^15.4.1",
     "travis-deploy-once": "^5.0.0"
   }
 }
