--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
       "<rootDir>/node_modules/"
     ]
   },
-  "dependencies": {},
-  "peerDependencies": {
+  "dependencies": {
     "axios": "^0.18.0"
   },
+  "peerDependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.49",
     "@babel/core": "^7.0.0-beta.49",
@@ -57,7 +57,6 @@
     "@commitlint/config-angular": "^6.1.3",
     "@commitlint/prompt": "^6.1.3",
     "@commitlint/prompt-cli": "^6.1.3",
-    "axios": "^0.18.0",
     "axios-debug": "0.0.4",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.4.3",
