--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@commitlint/config-angular": "^8.3.4",
     "@commitlint/prompt": "^8.3.5",
     "@commitlint/prompt-cli": "^8.3.5",
+    "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/pluginutils": "^3.0.10",
     "axios-debug": "0.0.4",
     "babel-jest": "^25.1.0",
     "codecov": "^3.6.5",
@@ -68,8 +70,7 @@
     "eslint-plugin-import": "^2.20.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup": "^2.12.0",
     "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-local-resolve": "^1.0.7",
     "semantic-release": "^17.0.3",
