--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run Tests
-        run: npm run unit-test
+        run: npm run test
       - name: Codecov
         uses: codecov/codecov-action@v1
   release:
