--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "build": "BABEL_ENV=production npx rollup -c",
     "codecov": "npx codecov",
     "commitmsg": "npx commitlint -e $GIT_PARAMS",
-    "deploy": "npm run travis-deploy-once 'npm run semantic-release'",
+    "deploy": "npm run semantic-release",
     "gc": "commit",
     "lint": "npx eslint --ext .js .",
     "prepare": "npm run build",
     "semantic-release": "npx semantic-release",
-    "test": "BABEL_ENV=test npx jest src/ --coverage --no-cache",
-    "travis-deploy-once": "npx travis-deploy-once"
+    "test": "BABEL_ENV=test npx jest src/ --coverage --no-cache"
   },
   "repository": {
     "type": "git",
@@ -48,32 +47,31 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-angular": "^8.3.4",
-    "@commitlint/prompt": "^8.3.5",
-    "@commitlint/prompt-cli": "^8.3.5",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/pluginutils": "^3.0.10",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/runtime": "^7.12.5",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-angular": "^11.0.0",
+    "@commitlint/prompt": "^11.0.0",
+    "@commitlint/prompt-cli": "^11.0.0",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/pluginutils": "^4.1.0",
     "axios-debug": "0.0.4",
-    "babel-jest": "^25.1.0",
-    "codecov": "^3.6.5",
-    "es-check": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "rollup": "^2.12.0",
-    "rollup-plugin-filesize": "^6.2.1",
+    "babel-jest": "^27.0.0-next.2",
+    "codecov": "^3.8.1",
+    "es-check": "^5.1.4",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^4.3.6",
+    "jest": "^27.0.0-next.2",
+    "rollup": "^2.35.1",
+    "rollup-plugin-filesize": "^9.1.0",
     "rollup-plugin-local-resolve": "^1.0.7",
-    "semantic-release": "^17.0.3",
-    "travis-deploy-once": "^5.0.11"
+    "semantic-release": "^17.3.0"
   }
 }
